# PatternRecognitionClass

./: .gitattributes  .gitignore  Agents.md  GCN Example.py  GNN tests.ipynb  LICENSE  README.md  SPN Precition with GNNs Seminar.lyx  SPN Precition with GNNs.lyx  Statistical Tests.ipynb  analyze_results.py  article.lyx  cross_validation_analysis.py  dgl-environment.yml  environment.yml  optimize_hyperparameters.py  optuna_GNN.py  optuna_MLP.py  process_data.sh  pyproject.toml  references.bib  requirements.txt  test_model.py  train_lightining.py  train_model.py
Data/: GridData_DS1_all_data.processed  GridData_DS1_test_data.processed  GridData_DS1_train_data.processed  GridData_DS2_all_data.processed  GridData_DS2_test_data.processed  GridData_DS2_train_data.processed  GridData_DS3_all_data.processed  GridData_DS3_test_data.processed  GridData_DS3_train_data.processed  GridData_DS4_all_data.processed  GridData_DS4_test_data.processed  GridData_DS4_train_data.processed  GridData_DS5_all_data.processed  GridData_DS5_test_data.processed  GridData_DS5_train_data.processed  RandData_DS1_test_data.processed  RandData_DS1_train_data.processed  RandData_DS2_test_data.processed  RandData_DS2_train_data.processed  RandData_DS3_test_data.processed  RandData_DS3_train_data.processed
Notebooks/: GNNs.ipynb  data_parser.ipynb
configs/: CONFIG_OPTIONS.md  default_config.toml
notebooks/: 01_interactive_exploration.py
pipelines/: run_pipeline.sh
results/: Chebyshev, 2 GNN layers, 2 readout layers.pt  Chebyshev, 2 GNN layers, 3 readout layers.pt  (+30 more)
scripts/: analyze_and_plot.py  (+8 more)
(+40 files in other folders)
