[project]
name = "SPN-GNN"
version = "0.1.0"
description = "Proof of concept evaluating SPN metrics with GNNs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.1",
    "torch_geometric",
    "ipython>=9.4.0",
    "lightning>=2.5.2",
    "optuna>=4.4.0",
    "scikit-learn>=1.7.1",
    "marimo>=0.14.16",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "black>=25.1.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
    "scikit-posthocs>=0.11.4",
    "pandas-stubs==2.3.0.250703",
    "scipy-stubs==1.16.1.0",
    "pytorch-lightning>=2.5.2",
    "optuna-integration[pytorch-lightning]>=4.5.0",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
